--- a/code/less/components.less
+++ b/code/less/components.less
@@ -1060,5 +1060,16 @@
 }
 
 /* form header > */
-/* profiles > */
+
+/* form box < */
+
+.form-box {
+    background:#f2f3f2;
+    padding:50px 55px;
+}
+
+/* form box > */
+
+
+
 
