--- a/code/less/icons.less
+++ b/code/less/icons.less
@@ -39,6 +39,12 @@
 
 /* 24 > */
 
+.ico_content_warning {
+    background-position:-18px -130px;
+    height:21px;
+    width:24px;
+}
+
 .ico_content_write-guide{
     background-position:-18px -338px;
     height:24px;
@@ -51,19 +57,19 @@
     width:10px;
 }
 .ico_content_home {
-    background-position:-18px -26px;
+    background-position:-18px 0;
     height:20px;
     width:20px;
 }
 .ico_content_date {
-    background-position:-18px -234px;
+    background-position:-18px -104px;
     height:22px;
-    width:26px;
+    width:22px;
 }
 .ico_content_themes {
-    background-position:-18px -130px;
-    height:20px;
-    width:24px;
+    background-position:-18px -52px;
+    height:19px;
+    width:22px;
 }
 .ico_content_tags {
     background-position:-18px -78px;
@@ -71,9 +77,9 @@
     width:24px;
 }
 .ico_content_main-category {
-    background-position:-18px -182px;
-    height:16px;
-    width:18px;
+    background-position:-18px -26px;
+    height:19px;
+    width:19px;
 }
 .ico_content_remove {
     background-position:-18px -390px;
