--- a/code/css/styles.css
+++ b/code/css/styles.css
@@ -762,6 +762,11 @@ h3 {
 }
 /* 16 < */
 /* 24 > */
+.ico_content_warning {
+  background-position: -18px -130px;
+  height: 21px;
+  width: 24px;
+}
 .ico_content_write-guide {
   background-position: -18px -338px;
   height: 24px;
@@ -779,19 +784,19 @@ h3 {
   width: 10px;
 }
 .ico_content_home {
-  background-position: -18px -26px;
+  background-position: -18px 0;
   height: 20px;
   width: 20px;
 }
 .ico_content_date {
-  background-position: -18px -234px;
+  background-position: -18px -104px;
   height: 22px;
-  width: 26px;
+  width: 22px;
 }
 .ico_content_themes {
-  background-position: -18px -130px;
-  height: 20px;
-  width: 24px;
+  background-position: -18px -52px;
+  height: 19px;
+  width: 22px;
 }
 .ico_content_tags {
   background-position: -18px -78px;
@@ -799,9 +804,9 @@ h3 {
   width: 24px;
 }
 .ico_content_main-category {
-  background-position: -18px -182px;
-  height: 16px;
-  width: 18px;
+  background-position: -18px -26px;
+  height: 19px;
+  width: 19px;
 }
 .ico_content_remove {
   background-position: -18px -390px;
@@ -890,8 +895,8 @@ select {
   border-color: #2ec19c;
 }
 .field_type_select {
-  background: #d9dbdc;
-  border: 1px solid #d9dbdc;
+  background: #fff;
+  border: 1px solid #fff;
   padding: 14px;
   height: 20px;
   width: 574px;
@@ -1026,8 +1031,12 @@ select {
   width: 498px;
   z-index: 20;
 }
+.form .form-field-capcha {
+  margin-left: 400px;
+}
 .capcha-image {
   float: left;
+  margin-left: -160px;
   margin-right: 12px;
   width: 150px;
 }
@@ -1043,7 +1052,7 @@ select {
 .jq-selectbox__dropdown {
   background: #D9DBDC;
   padding: 0 1px;
-  margin-left: -15px;
+  left: 0;
   max-height: 250px;
   top: 50px;
   width: 100%;
@@ -1157,7 +1166,42 @@ input[type="button"] {
 .form_comment .field_type_text {
   width: 560px;
 }
-/* form comment > *//* box < */
+/* form comment > */
+.field_state_error {
+  border-color: #f2da49;
+}
+.field-hint {
+  background: #4b5962;
+  color: #fff;
+  cursor: default;
+  font-size: 15px;
+  margin: 6px 0 0 60px;
+  padding: 11px;
+  position: absolute;
+  border-radius: 5px;
+  z-index: 10;
+}
+.field-hint:after {
+  content: "";
+  position: absolute;
+  left: 18px;
+  top: -6px;
+  width: 0px;
+  height: 0px;
+  border-style: solid;
+  border-width: 0 5px 6px 5px;
+  border-color: transparent transparent #4b5962 transparent;
+}
+.field-hint .ico {
+  display: inline-block;
+  vertical-align: top;
+}
+.field-hint .field-hint__text {
+  display: inline-block;
+  vertical-align: top;
+  line-height: 20px;
+}
+/* box < */
 .box_base {
   text-align: center;
   line-height: 50px;
@@ -1245,6 +1289,7 @@ input[type="button"] {
   display: block;
 }
 .menu_breadcrumbs .menu__item .menu__link_icon {
+  background: #ededed;
   display: block;
   height: 50px;
   line-height: 52px;
@@ -1252,23 +1297,28 @@ input[type="button"] {
   text-decoration: none;
   width: 50px;
 }
+.menu_breadcrumbs .menu__item .menu__link_icon .ico {
+  -moz-opacity: 0.3;
+  -khtml-opacity: 0.3;
+  -webkit-opacity: 0.3;
+  opacity: 0.3;
+  -ms-filter: progid:DXImageTransform.Microsoft.Alpha(opacity=30);
+  filter: alpha(opacity=30);
+}
 .menu_breadcrumbs .menu__item_active .menu__link_icon,
 .menu_breadcrumbs .menu__item:hover .menu__link_icon {
   background-color: #fff;
   -webkit-transition: all 0.3s ease;
   transition: all 0.3s ease;
 }
-.menu_breadcrumbs .menu__item_active .menu__link_icon .ico_content_home,
-.menu_breadcrumbs .menu__item:hover .menu__link_icon .ico_content_home {
-  background-position: -18px 0;
-}
-.menu_breadcrumbs .menu__item_active .menu__link_icon .ico_content_tags,
-.menu_breadcrumbs .menu__item:hover .menu__link_icon .ico_content_tags {
-  background-position: -18px -52px;
-}
-.menu_breadcrumbs .menu__item_active .menu__link_icon .ico_content_themes,
-.menu_breadcrumbs .menu__item:hover .menu__link_icon .ico_content_themes {
-  background-position: -18px -104px;
+.menu_breadcrumbs .menu__item_active .menu__link_icon .ico,
+.menu_breadcrumbs .menu__item:hover .menu__link_icon .ico {
+  -moz-opacity: 1;
+  -khtml-opacity: 1;
+  -webkit-opacity: 1;
+  opacity: 1;
+  -ms-filter: progid:DXImageTransform.Microsoft.Alpha(opacity=100);
+  filter: alpha(opacity=100);
 }
 /* navigator > */
 /* tags < */
@@ -1430,18 +1480,30 @@ input[type="button"] {
 .aside_style_red .aside__header {
   background: #ae4f63;
 }
+.aside_style_red .aside__header:hover {
+  background: #9c4859;
+}
 .aside_style_red .aside__content {
-  background: #e15b5c;
+  background: #ce494a;
 }
 .aside_style_red .text-block {
   color: #ffc0c0;
+}
+.aside_style_red .text-block:hover {
+  color: #fee1e1;
 }
 .aside_style_red .action-menu .box {
   background: rgba(255, 255, 255, 0.2);
   margin-right: 1px;
 }
+.aside_style_red .action-menu .box:hover {
+  background: #dd8081;
+}
 .aside_style_green .aside__header {
   background: #85a541;
+}
+.aside_style_green .aside__header:hover {
+  background: #789539;
 }
 .aside_style_green .aside__content {
   background: #bde26e;
@@ -1449,12 +1511,21 @@ input[type="button"] {
 .aside_style_green .text-block {
   color: #617b29;
 }
+.aside_style_green .text-block:hover {
+  color: #48630f;
+}
 .aside_style_green .action-menu .box {
   background: #a9cd5d;
   margin-right: 1px;
 }
+.aside_style_green .action-menu .box:hover {
+  background: #9fc353;
+}
 .aside_style_blue .aside__header {
   background: #5a979d;
+}
+.aside_style_blue .aside__header:hover {
+  background: #4c848a;
 }
 .aside_style_blue .aside__content {
   background: #9ddae0;
@@ -1462,9 +1533,15 @@ input[type="button"] {
 .aside_style_blue .text-block {
   color: #3f7d83;
 }
+.aside_style_blue .text-block:hover {
+  color: #2d6469;
+}
 .aside_style_blue .action-menu .box {
   background: #89c6cc;
   margin-right: 1px;
+}
+.aside_style_blue .action-menu .box:hover {
+  background: #82bfc5;
 }
 /* aside block > */
 /* users-top < */
@@ -1481,6 +1558,9 @@ input[type="button"] {
   height: 35px;
   line-height: 37px;
   width: 35px;
+}
+.users-top .users-top__item .box:hover {
+  background: #d9d9d9;
 }
 .users-top .users-top__item .box .userpic__image {
   height: 35px;
@@ -1503,6 +1583,9 @@ input[type="button"] {
 .users-top .users-top__item .username .link {
   color: #6e7c7d;
   text-decoration: none;
+}
+.users-top .users-top__item .username .link:hover {
+  color: #0042af;
 }
 /* users-top > */
 /* guides-list < */
@@ -1735,6 +1818,9 @@ input[type="button"] {
   height: 50px;
   overflow: hidden;
 }
+.author:hover {
+  background: #9da7ad;
+}
 .author .userpic {
   float: left;
 }
@@ -1765,6 +1851,9 @@ input[type="button"] {
 .tabs-title li:first-child .link {
   border: 0;
 }
+.tabs-title li:hover {
+  background: #cdd0d5;
+}
 .tabs-title .link {
   border-left: 1px solid #e4e6e5;
   color: #475253;
@@ -1781,14 +1870,23 @@ input[type="button"] {
 .tabs-title .tabs-title__item_current {
   background: #fff;
 }
+.tabs-title .tabs-title__item_current:hover {
+  background: #fff;
+}
 .tabs-title .tabs-title__item_current.tabs-title__item_marked .link {
   color: #fff;
 }
 .tabs-title .tabs-title__item_current.tabs-title__item_marked .ico_content_guide-s {
   background-position: 0 -307px;
 }
+.tabs-title .tabs-title__item_current.tabs-title__item_marked:hover {
+  background: #e15b5c;
+}
 .tabs-title .tabs-title__item_marked {
   background: #e15b5c;
+}
+.tabs-title .tabs-title__item_marked:hover {
+  background: #ef6364;
 }
 .tab-content {
   display: none;
@@ -1829,6 +1927,12 @@ input[type="button"] {
   height: 50px;
   padding-right: 110px;
   position: relative;
+}
+.comment_expert .comment__header:hover {
+  background: #dbdddc;
+}
+.comment_expert .comment__header .action-menu {
+  right: -100px;
 }
 .comment_expert .username .link {
   color: #0042af;
@@ -1881,6 +1985,9 @@ input[type="button"] {
   border-bottom: 1px solid #edeeee;
   text-align: left;
 }
+.action-menu .dropdown-menu .dropdown-menu__item:hover {
+  background: #f2f3f2;
+}
 .action-menu .dropdown-menu .link {
   color: #323c43;
   display: block;
@@ -1905,6 +2012,9 @@ input[type="button"] {
   font: 15px/52px 'PTSansNarrowRegular', ArialNarrow, Arial, Tahoma, sans-serif !important;
   text-transform: uppercase !important;
 }
+.link_green-like:hover {
+  background: #14d1a2 !important;
+}
 /* green like btn > */
 /* .link_important < */
 .link_important {
@@ -1913,6 +2023,9 @@ input[type="button"] {
   font-size: 15px;
   margin-bottom: 20px;
   text-decoration: none;
+}
+.link_important:hover {
+  color: #e26a6b;
 }
 /* .link_important > */
 /* accordion < */
