--- a/code/less/forms.less
+++ b/code/less/forms.less
@@ -39,13 +39,13 @@ select {
 }
 
 .field_type_select {
-    background:#d9dbdc;
-    border:1px solid #d9dbdc;
+    background:#fff;
+    border:1px solid #fff;
     padding:14px;
     height:20px;
     width:574px;
 
-    &:focus {
+    &:focus	{
 	border-color: @green;
     }
 }
@@ -208,12 +208,17 @@ select {
     }
 }
 
+.form .form-field-capcha {
+    margin-left:400px;
+}
 
 .capcha-image {
     float:left;
+    margin-left:-160px;
     margin-right:12px;
     width:150px;
 }
+
 .field_type_capcha {
     overflow:hidden;
     width:413px;
@@ -228,7 +233,7 @@ select {
 .jq-selectbox__dropdown {
     background: #D9DBDC;
     padding:0 1px;
-    margin-left:-15px;
+    left:0;
     max-height:250px;
     top:50px;
     width:100%;
@@ -351,3 +356,42 @@ input[type="button"] {
 }
 
 /* form comment > */
+
+.field_state_error {
+    border-color:#f2da49;
+}
+
+.field-hint {
+    background:#4b5962;
+    color:#fff;
+    cursor:default;
+    font-size:15px;
+    margin:6px 0 0 60px;
+    padding:11px;
+    position:absolute;
+    border-radius:5px;
+    z-index:10;
+
+    &:after {
+	content:"";
+	position:absolute;
+	left:18px;
+	top:-6px;
+	width: 0px;
+	height: 0px;
+	border-style: solid;
+	border-width: 0 5px 6px 5px;
+	border-color: transparent transparent #4b5962 transparent;
+    }
+
+    .ico {
+	display:inline-block;
+	vertical-align:top;
+    }
+
+    .field-hint__text {
+	display:inline-block;
+	vertical-align:top;
+	line-height:20px;
+    }
+}
