--- a/code/less/components.less
+++ b/code/less/components.less
@@ -1099,7 +1099,54 @@
     }
 }
 
+.standard-element_guide {
+    .profile {
+	height:auto;
+	min-height:85px;
+	padding-bottom:45px;
+    }
+    .date {
+	color:#4b5962;
+	.opacity(0.5);
+    }
+}
+.standard-element_style_gray-dark {
+    .standard-element__content {
+	background:#e4e6e5;
+	&:hover {
+	    color:#1f2b33;
+	}
+    }
+}
+.standard-element_style_gray-light {
+    .standard-element__content {
+	background:#f2f3f2;
+	&:hover {
+	    color:#000;
+	}
+    }
+}
+.standard-element_style_blue {
+    .standard-element__content {
+	background:#9ddae0;
+	&:hover {
+	    color:#15464b;
+	}
+    }
+}
+.standard-element_style_green {
+    .standard-element__content {
+	background:#bde26e;
+	&:hover {
+	    color:#395107;
+	}
+    }
+}
 
+
+.section-illustrate {
+    display:block;
+}
 /* form header < */
 
 .form-header {
