--- a/code/less/icons.less
+++ b/code/less/icons.less
@@ -34,6 +34,12 @@
     margin-right: 8px;
     width:15px;
 }
+.ico_content_plus-g {
+   background-position:0 -18px;
+    height:17px;
+    margin-right: 8px;
+    width:15px;
+}
 
 /* 16 < */
 
@@ -93,10 +99,10 @@
     .opacity(0.3);
 }
 .ico_content_guide-red {
-    background-position:-18px -260px;
-    height:18px;
-    width:16px;
-    margin-right:7px;
+    background-position: -18px -259px;
+    height: 18px;
+    margin-right: 7px;
+    width: 16px
 }
 .ico_content_comments-s {
    background-position:0 -90px;
