--- a/code/css/styles.css
+++ b/code/css/styles.css
@@ -320,14 +320,57 @@ h3 {
   font-size: 17px;
   line-height: 26px;
 }
-.text-block h2,
+.text-block img {
+  display: block;
+  margin-top: 20px;
+  margin-bottom: 28px;
+}
+.text-block img.align-center {
+  margin-left: auto;
+  margin-right: auto;
+}
+.text-block h1 {
+  color: #279d80;
+  font-size: 26px;
+  line-height: 34px;
+  margin-bottom: 23px;
+  font-family: 'PTSansNarrowRegular', ArialNarrow, Arial, Tahoma, sans-serif;
+  margin-top: 32px;
+}
+.text-block h2 {
+  background: url(../images/bg/title.png) no-repeat 0 7px;
+  color: #33424b;
+  font-size: 24px;
+  font-family: 'PTSansNarrowRegular', ArialNarrow, Arial, Tahoma, sans-serif;
+  margin-bottom: 10px;
+  line-height: 28px;
+  padding-left: 20px;
+}
 .text-block h3 {
-  margin-bottom: 15px;
+  color: #9a4f54;
+  font: 20px/24px 'PTSansNarrowRegular', ArialNarrow, Arial, Tahoma, sans-serif;
+  margin: 20px 0 10px;
+}
+.text-block h4 {
+  color: #4b5962;
+  font: 16px/22px 'PTSansNarrowRegular', ArialNarrow, Arial, Tahoma, sans-serif;
+  margin: 0 0 20px;
+  text-transform: uppercase;
+}
+.text-block .text-section {
+  padding-left: 30px;
+}
+.text-block .text-section h2 {
+  margin-left: -24px;
 }
 .text-block ol,
 .text-block ul {
-  padding-left: 15px;
-  margin-bottom: 15px;
+  padding-left: 55px;
+  margin-bottom: 17px;
+}
+.text-block ol li,
+.text-block ul li {
+  margin-bottom: 2px;
 }
 .text-block ol {
   list-style: decimal;
@@ -337,6 +380,7 @@ h3 {
 }
 .text-block p {
   margin-bottom: 15px;
+  line-height: 24px;
 }
 /* Content styles > */
 /*layout < */
@@ -361,7 +405,7 @@ h3 {
   width: 300px;
 }
 .article {
-  padding: 29px 50px 25px 0;
+  padding: 29px 30px 25px 0;
 }
 /*  layout > */
 /* header > */
@@ -585,7 +629,6 @@ h3 {
   background: #4b5962;
   float: left;
   height: 90px;
-  position: relative;
   width: 130px;
   -webkit-transition: background 0.2s ease;
   transition: background 0.2s ease;
@@ -641,6 +684,8 @@ h3 {
 }
 .menu__main > .menu__item_active .menu_sub {
   display: block;
+  position: absolute;
+  left: 0;
 }
 .menu__main > .menu__item_active > .menu__link:after {
   -moz-opacity: 0;
@@ -706,6 +751,9 @@ h3 {
 .search .field_type_search::-webkit-input-placeholder {
   color: #dddddd;
 }
+.search .field_type_search:focus {
+  border-color: #fff;
+}
 .search .btn_search {
   right: 0;
   top: 0;
@@ -756,6 +804,12 @@ h3 {
 }
 .ico_content_plus-w {
   background-position: 0 -72px;
+  height: 17px;
+  margin-right: 8px;
+  width: 15px;
+}
+.ico_content_plus-g {
+  background-position: 0 -18px;
   height: 17px;
   margin-right: 8px;
   width: 15px;
@@ -825,10 +879,10 @@ h3 {
   filter: alpha(opacity=30);
 }
 .ico_content_guide-red {
-  background-position: -18px -260px;
+  background-position: -18px -259px;
   height: 18px;
-  width: 16px;
   margin-right: 7px;
+  width: 16px;
 }
 .ico_content_comments-s {
   background-position: 0 -90px;
@@ -894,6 +948,9 @@ select {
 .field_type_textarea:focus {
   border-color: #2ec19c;
 }
+.field_type_textarea_short {
+  height: 60px;
+}
 .field_type_select {
   background: #fff;
   border: 1px solid #fff;
@@ -946,6 +1003,9 @@ select {
   margin: 11px 0;
   width: 120px;
 }
+.form .link {
+  color: #4b5962;
+}
 .form-hint {
   color: #abb0b3;
   display: block;
@@ -953,7 +1013,6 @@ select {
   margin-top: 6px;
 }
 .form-hint .link {
-  color: #4b5962;
   font: 17px 'PTSansRegular', Arial, Tahoma, sans-serif;
 }
 /* custom-field < */
@@ -1166,6 +1225,9 @@ input[type="button"] {
 .form_comment .field_type_text {
   width: 560px;
 }
+.form_comment .field_type_text:focus {
+  border-color: #fff;
+}
 /* form comment > */
 .field_state_error {
   border-color: #f2da49;
@@ -1201,7 +1263,7 @@ input[type="button"] {
   vertical-align: top;
   line-height: 20px;
 }
-/* box < */
+/* common blocks < */
 .box_base {
   text-align: center;
   line-height: 50px;
@@ -1212,7 +1274,90 @@ input[type="button"] {
   line-height: 52px;
   width: 50px;
 }
-/* box > */
+.userpic {
+  overflow: hidden;
+}
+.userpic .userpic__link {
+  display: block;
+}
+.like-box {
+  background: #00b88a;
+  display: block;
+  cursor: pointer;
+  height: 50px;
+  text-decoration: none;
+  text-align: left;
+  white-space: nowrap;
+}
+.like-box .ico {
+  margin: 0 17px 0 0;
+}
+.like-box .like-box__text {
+  color: #fff;
+  font: 15px/55px 'PTSansNarrowRegular', ArialNarrow, Arial, Tahoma, sans-serif;
+  text-transform: uppercase;
+}
+.like-box:hover {
+  background: #2ec19c;
+  -moz-opacity: 1;
+  -khtml-opacity: 1;
+  -webkit-opacity: 1;
+  opacity: 1;
+  -ms-filter: progid:DXImageTransform.Microsoft.Alpha(opacity=100);
+  filter: alpha(opacity=100);
+}
+.like-box_ready {
+  background: #e15b5c;
+}
+.like-box_ready .ico {
+  background-position: 0 -54px;
+  height: 12px;
+  width: 15px;
+}
+.like-box_ready:hover {
+  background: #e15b5c;
+}
+.box_base > .like-box {
+  position: absolute;
+  top: 0;
+  left: 0;
+  text-align: left;
+  width: 50px;
+  z-index: 10;
+}
+.box_base > .like-box .ico {
+  margin: 0 17px;
+  -moz-opacity: 0.8;
+  -khtml-opacity: 0.8;
+  -webkit-opacity: 0.8;
+  opacity: 0.8;
+  -ms-filter: progid:DXImageTransform.Microsoft.Alpha(opacity=80);
+  filter: alpha(opacity=80);
+}
+.box_base > .like-box .like-box__text {
+  display: none;
+}
+.box_base > .like-box:hover {
+  width: 205px;
+}
+.box_base > .like-box:hover .like-box__text {
+  display: inline-block;
+  vertical-align: top;
+}
+.box_base > .like-box:hover .ico {
+  -moz-opacity: 1;
+  -khtml-opacity: 1;
+  -webkit-opacity: 1;
+  opacity: 1;
+  -ms-filter: progid:DXImageTransform.Microsoft.Alpha(opacity=100);
+  filter: alpha(opacity=100);
+}
+.box_base > .like-box_ready:hover {
+  width: 50px;
+}
+.box_base > .like-box_ready:hover .like-box__text {
+  display: none;
+}
 /* navigator < */
 .navigator {
   background: #f2f3f2;
@@ -1425,6 +1570,24 @@ input[type="button"] {
 .aside .aside__content {
   position: relative;
 }
+.aside .aside__content .action-menu {
+  position: relative;
+  overflow: hidden;
+  top: auto;
+  right: auto;
+  padding-left: 20px;
+  padding-bottom: 30px;
+}
+.aside .aside__content .action-menu .box {
+  color: #fff;
+  font-family: 'PTSansNarrowRegular', ArialNarrow, Arial, Tahoma, sans-serif;
+  -moz-opacity: 0.8;
+  -khtml-opacity: 0.8;
+  -webkit-opacity: 0.8;
+  opacity: 0.8;
+  -ms-filter: progid:DXImageTransform.Microsoft.Alpha(opacity=80);
+  filter: alpha(opacity=80);
+}
 .aside .guides-list__item {
   background: #d6d9dd;
 }
@@ -1441,24 +1604,6 @@ input[type="button"] {
   color: #5e6971;
   font: 14px/20px 'PTSansNarrowRegular', ArialNarrow, Arial, Tahoma, sans-serif;
   text-transform: uppercase;
-}
-.aside .action-menu {
-  position: relative;
-  overflow: hidden;
-  top: auto;
-  right: auto;
-  padding-left: 20px;
-  padding-bottom: 30px;
-}
-.aside .action-menu .box {
-  color: #fff;
-  font-family: 'PTSansNarrowRegular', ArialNarrow, Arial, Tahoma, sans-serif;
-  -moz-opacity: 0.8;
-  -khtml-opacity: 0.8;
-  -webkit-opacity: 0.8;
-  opacity: 0.8;
-  -ms-filter: progid:DXImageTransform.Microsoft.Alpha(opacity=80);
-  filter: alpha(opacity=80);
 }
 .aside .article-short {
   padding: 17px 17px 26px 17px;
@@ -1477,70 +1622,87 @@ input[type="button"] {
   color: #000;
   text-decoration: none;
 }
-.aside_style_red .aside__header {
+.article_style_red .aside__header {
   background: #ae4f63;
 }
-.aside_style_red .aside__header:hover {
+.article_style_red .aside__header:hover {
   background: #9c4859;
 }
-.aside_style_red .aside__content {
+.article_style_red.author,
+.article_style_red.author:hover {
+  background: #9a4f54;
+}
+.article_style_red .aside__content,
+.article_style_red.page-header_article {
   background: #ce494a;
 }
-.aside_style_red .text-block {
+.article_style_red .text-block {
   color: #ffc0c0;
 }
-.aside_style_red .text-block:hover {
+.article_style_red .text-block:hover {
   color: #fee1e1;
 }
-.aside_style_red .action-menu .box {
+.article_style_red .action-menu .box {
   background: rgba(255, 255, 255, 0.2);
   margin-right: 1px;
 }
-.aside_style_red .action-menu .box:hover {
+.article_style_red .action-menu .box:hover {
   background: #dd8081;
 }
-.aside_style_green .aside__header {
+.article_style_red .page-title {
+  color: #000;
+}
+.article_style_red .article-short {
+  color: #febfc0;
+  font-size: 20px;
+  margin-top: 16px;
+  padding-right: 180px;
+}
+.article_style_red .date {
+  color: #dd8f8f;
+}
+.article_style_green .aside__header {
   background: #85a541;
 }
-.aside_style_green .aside__header:hover {
+.article_style_green .aside__header:hover {
   background: #789539;
 }
-.aside_style_green .aside__content {
+.article_style_green .aside__content {
   background: #bde26e;
 }
-.aside_style_green .text-block {
+.article_style_green .text-block {
   color: #617b29;
 }
-.aside_style_green .text-block:hover {
+.article_style_green .text-block:hover {
   color: #48630f;
 }
-.aside_style_green .action-menu .box {
+.article_style_green .action-menu .box {
   background: #a9cd5d;
   margin-right: 1px;
 }
-.aside_style_green .action-menu .box:hover {
+.article_style_green .action-menu .box:hover {
   background: #9fc353;
 }
-.aside_style_blue .aside__header {
+.article_style_blue .aside__header {
   background: #5a979d;
 }
-.aside_style_blue .aside__header:hover {
+.article_style_blue .aside__header:hover {
   background: #4c848a;
 }
-.aside_style_blue .aside__content {
+.article_style_blue .aside__content {
   background: #9ddae0;
 }
-.aside_style_blue .text-block {
+.article_style_blue .text-block {
   color: #3f7d83;
 }
-.aside_style_blue .text-block:hover {
+.article_style_blue .text-block:hover {
   color: #2d6469;
 }
-.aside_style_blue .action-menu .box {
+.article_style_blue .action-menu .box {
   background: #89c6cc;
   margin-right: 1px;
 }
-.aside_style_blue .action-menu .box:hover {
+.article_style_blue .action-menu .box:hover {
   background: #82bfc5;
 }
 /* aside block > */
@@ -1637,6 +1799,18 @@ input[type="button"] {
   position: absolute;
   right: 10px;
   top: 0;
+}
+.guides-list_requests .guides-list__item {
+  background: #fff;
+}
+.guides-list_requests .guides-list__item:hover {
+  background: #fff;
+}
+.guides-list_plus .guides-list__item {
+  background: #fff;
+}
+.guides-list_plus .guides-list__item:hover {
+  background: #f2f3f2;
 }
 /* guides-list > */
 /* selector < */
@@ -1831,6 +2005,15 @@ input[type="button"] {
   overflow: hidden;
   text-decoration: none;
 }
+.author .status {
+  padding-left: 23px;
+  -moz-opacity: 0.4;
+  -khtml-opacity: 0.4;
+  -webkit-opacity: 0.4;
+  opacity: 0.4;
+  -ms-filter: progid:DXImageTransform.Microsoft.Alpha(opacity=40);
+  filter: alpha(opacity=40);
+}
 /* author  > */
 /* tabs < */
 .tabs__header {
@@ -1842,16 +2025,16 @@ input[type="button"] {
   table-layout: fixed;
   width: 100%;
 }
-.tabs-title li {
+.tabs-title .tabs-title__item {
   background: #c1c5cb;
   display: table-cell;
   height: 50px;
   text-align: center;
 }
-.tabs-title li:first-child .link {
+.tabs-title .tabs-title__item:first-child .link {
   border: 0;
 }
-.tabs-title li:hover {
+.tabs-title .tabs-title__item:hover {
   background: #cdd0d5;
 }
 .tabs-title .link {
@@ -1860,6 +2043,7 @@ input[type="button"] {
   font: 15px/52px 'PTSansNarrowRegular', ArialNarrow, Arial, Tahoma, sans-serif;
   display: block;
   height: 100%;
+  text-align: center;
   text-decoration: none;
   text-transform: uppercase;
 }
@@ -1867,25 +2051,22 @@ input[type="button"] {
   margin-right: 10px;
   margin-top: -1px;
 }
-.tabs-title .tabs-title__item_current {
+.tabs-title .ui-tabs-active {
   background: #fff;
 }
-.tabs-title .tabs-title__item_current:hover {
+.tabs-title .ui-tabs-active:hover {
   background: #fff;
 }
-.tabs-title .tabs-title__item_current.tabs-title__item_marked .link {
+.tabs-title .ui-tabs-active .bg-style_red-light {
   color: #fff;
 }
-.tabs-title .tabs-title__item_current.tabs-title__item_marked .ico_content_guide-s {
+.tabs-title .ui-tabs-active .bg-style_red-light .ico_content_guide-s {
   background-position: 0 -307px;
 }
-.tabs-title .tabs-title__item_current.tabs-title__item_marked:hover {
+.tabs-title .ui-tabs-active .bg-style_red-light:hover {
   background: #e15b5c;
 }
-.tabs-title .tabs-title__item_marked {
-  background: #e15b5c;
-}
-.tabs-title .tabs-title__item_marked:hover {
+.tabs-title .bg-style_red-light:hover {
   background: #ef6364;
 }
 .tab-content {
@@ -1896,6 +2077,12 @@ input[type="button"] {
 .comments-list__item {
   background: #f2f3f2;
   border-bottom: 1px solid #e4e6e5;
+}
+.comments-list_white .comments-list__item {
+  background: #fff;
+}
+.comments-list_white .comments-list__item:hover {
+  background: #f2f3f2;
 }
 .comment {
   position: relative;
@@ -2005,17 +2192,6 @@ input[type="button"] {
 .signature .link {
   text-decoration: none;
 }
-/* green like btn < */
-.link_green-like {
-  background: #2ec19c !important;
-  color: #fff !important;
-  font: 15px/52px 'PTSansNarrowRegular', ArialNarrow, Arial, Tahoma, sans-serif !important;
-  text-transform: uppercase !important;
-}
-.link_green-like:hover {
-  background: #14d1a2 !important;
-}
-/* green like btn > */
 /* .link_important < */
 .link_important {
   color: #e15b5c;
@@ -2206,6 +2382,65 @@ input[type="button"] {
   padding: 50px 55px;
 }
 /* form box > */
+.view-more {
+  background: #bdc2c8;
+  color: #fff;
+  font: 16px/50px 'PTSansNarrowRegular', ArialNarrow, Arial, Tahoma, sans-serif;
+  height: 50px;
+  display: block;
+  text-align: center;
+  text-decoration: none;
+  text-transform: uppercase;
+}
+.view-more:hover {
+  background: #4b5962;
+}
+.links .links__item {
+  background: #fff;
+  display: block;
+  height: 49px;
+  overflow: hidden;
+  border-bottom: 1px solid #e4e6e5;
+}
+.links .links__item:hover {
+  background: #e9ebe9;
+}
+.links .links__item:hover .link {
+  color: #1e319d;
+}
+.links .link {
+  color: #4b5962;
+  font-size: 15px;
+  display: table-cell;
+  padding: 0 20px;
+  vertical-align: middle;
+  text-decoration: none;
+  height: 49px;
+  width: 100%;
+}
+.article-sources {
+  border-top: 1px solid #d4d8d8;
+  padding-top: 22px;
+}
+.article-sources h4 {
+  color: #4b5962;
+  font: 16px/22px 'PTSansNarrowRegular', ArialNarrow, Arial, Tahoma, sans-serif;
+  margin: 0 0 15px;
+  text-transform: uppercase;
+}
+.article-sources .sources-list {
+  list-style: none;
+  margin-left: 20px;
+}
+.article-sources .sources-list .sources-list__item {
+  list-style: none;
+  margin-bottom: 2px;
+  color: #8b9499;
+  font-size: 13px;
+}
+.article-sources .sources-list .sources-list__item .link {
+  text-decoration: none;
+}
 /* clearing > */
 .clearfix:after,
 .nav:after,
