--- a/code/less/components.less
+++ b/code/less/components.less
@@ -1,4 +1,6 @@
-/* box < */
+/* common blocks < */
+
+
 
 .box_base {
     text-align: center;
@@ -9,7 +11,94 @@
     .box_size();
 }
 
-/* box > */
+.userpic {
+    overflow:hidden;
+
+    .userpic__link {
+	display:block;
+    }
+}
+
+
+.like-box {
+    background: #00b88a;
+    display: block;
+    cursor: pointer;
+    height:50px;
+    text-decoration: none;
+    text-align: left;
+    white-space:nowrap;
+
+    .ico {
+	margin: 0 17px 0 0;
+    }
+
+    .like-box__text {
+	color:#fff;
+	font:15px/55px @font-family-narrow;
+	text-transform: uppercase;
+    }
+
+    &:hover {
+	background: #2ec19c;
+	.opacity(1);
+    }
+}
+
+.like-box_ready {
+    background: #e15b5c;
+
+    .ico {
+	background-position: 0 -54px;
+	height: 12px;
+	width:15px;
+    }
+
+    &:hover {
+	background: #e15b5c;
+    }
+}
+
+.box_base {
+    & > .like-box  {
+	position: absolute;
+	top:0;
+	left:0;
+	text-align: left;
+	width:50px;
+	z-index:10;
+
+	.ico {
+	    margin: 0 17px;
+	    .opacity(0.8);
+	}
+
+	.like-box__text {
+	    display: none;
+	}
+
+	&:hover {
+	    width:205px;
+
+	    .like-box__text {
+		display: inline-block;
+		vertical-align: top;
+	    }
+	    .ico {
+		.opacity(1);
+	    }
+	}
+    }
+    & > .like-box_ready {
+	&:hover {
+	    width:50px;
+
+	    .like-box__text {
+		display: none;
+	    }
+	}
+    }
+}
 
 /* navigator < */
 
@@ -231,9 +320,9 @@
 	    display:inline-block;
 	    padding:3px 15px 0;
 	    vertical-align:middle;
-	   text-transform:none;
-	   max-width:215px;
-	   word-break:break-all;
+	    text-transform:none;
+	    max-width:215px;
+	    word-break:break-all;
 	}
 
 
@@ -247,6 +336,21 @@
 
     .aside__content {
 	position:relative;
+
+	.action-menu {
+	    position:relative;
+	    overflow:hidden;
+	    top:auto;
+	    right:auto;
+	    padding-left:20px;
+	    padding-bottom:30px;
+
+	    .box {
+		color:#fff;
+		font-family:@font-family-narrow;
+		.opacity(0.8);
+	    }
+	}
     }
 
     .guides-list__item {
@@ -269,20 +373,7 @@
 	}
 
     }
-    .action-menu {
-	position:relative;
-	overflow:hidden;
-	top:auto;
-	right:auto;
-	padding-left:20px;
-	padding-bottom:30px;
 
-	.box {
-	    color:#fff;
-	    font-family:@font-family-narrow;
-	    .opacity(0.8);
-	}
-    }
 
     .article-short {
 	padding:17px 17px 26px 17px;
@@ -305,14 +396,20 @@
     }
 }
 
-.aside_style_red {
+.article_style_red {
     .aside__header {
 	background:#ae4f63;
-	&:hover {
-	  background:#9c4859;
+	&:hover	    {
+	    background:#9c4859;
 	}
     }
-    .aside__content{
+
+    &.author,
+    &.author:hover {
+	background:#9a4f54;
+    }
+    .aside__content,
+    &.page-header_article {
 	background:#ce494a;
     }
     .text-block {
@@ -334,40 +431,54 @@
 	}
     }
 
+
+	.page-title {
+	    color:#000;
+	}
+	.article-short {
+	    color:#febfc0;
+	    font-size:20px;
+	    margin-top:16px;
+	    padding-right:180px;
+	}
+
+	.date {
+	    color:#dd8f8f;
+	}
 }
 
-.aside_style_green {
-     .aside__header {
+.article_style_green {
+    .aside__header {
 	background:#85a541;
 
 	&:hover {
 	    background:#789539;
 	}
 
-	}
-	.aside__content{
-	    background:#bde26e;
-	}
-	.text-block {
-	    color:#617b29;
+    }
+    .aside__content{
+	background:#bde26e;
+    }
+    .text-block {
+	color:#617b29;
 
-	    &:hover {
+	&:hover {
 	    color:#48630f;
 	}
-	}
-	.action-menu {
-	    .box {
-		background:#a9cd5d;
-		margin-right:1px;
+    }
+    .action-menu {
+	.box {
+	    background:#a9cd5d;
+	    margin-right:1px;
 
-		&:hover {
-		    background:#9fc353;
-		}
+	    &:hover {
+		background:#9fc353;
 	    }
+	}
     }
 }
-.aside_style_blue {
-     .aside__header {
+.article_style_blue {
+    .aside__header {
 	background:#5a979d;
 
 	&:hover {
@@ -390,8 +501,8 @@
 	    margin-right:1px;
 
 	    &:hover {
-	    background:#82bfc5;
-	}
+		background:#82bfc5;
+	    }
 	}
     }
 }
@@ -504,6 +615,24 @@
     top:0;
 }
 
+.guides-list_requests {
+    .guides-list__item {
+	background:#fff;
+	&:hover {
+	    background:#fff;
+	}
+    }
+}
+.guides-list_plus {
+     .guides-list__item {
+	background:#fff;
+
+	&:hover {
+	    background:#f2f3f2;
+	}
+    }
+}
+
 /* guides-list > */
 
 /* selector < */
@@ -574,7 +703,7 @@
 	}
 
 	.bg-style_blue {
-	     background:#354bc3;
+	    background:#354bc3;
 	}
     }
 
@@ -739,7 +868,12 @@
 	overflow:hidden;
 	text-decoration:none;
     }
+    .status {
+	padding-left:23px;
+	.opacity(0.4);
+    }
 }
+
 
 /* author  > */
 
@@ -755,7 +889,7 @@
     table-layout:fixed;
     width:100%;
 
-    li {
+    .tabs-title__item {
 	background:#c1c5cb;
 	display:table-cell;
 	height:50px;
@@ -775,6 +909,7 @@
 	font:15px/52px @font-family-narrow;
 	display:block;
 	height:100%;
+	text-align:center;
 	text-decoration:none;
 	text-transform:uppercase;
 
@@ -784,30 +919,25 @@
 	}
 
     }
-    .tabs-title__item_current {
+    .ui-tabs-active {
 	background:#fff;
 
 	&:hover {
 	    background:#fff;
 	}
 
-	&.tabs-title__item_marked {
-
-	    .link {
-		color:#fff;
-	    }
+	.bg-style_red-light {
+	    color:#fff;
 
 	    .ico_content_guide-s {
 		background-position: 0 -307px;
 	    }
-
 	    &:hover {
 		background:@red-light;
 	    }
 	}
     }
-    .tabs-title__item_marked {
-	background:@red-light;
+    .bg-style_red-light {
 
 	&:hover {
 	    background:#ef6364;
@@ -831,6 +961,16 @@
 
     &:hover {
 
+    }
+}
+
+.comments-list_white {
+    .comments-list__item  {
+	background:#fff;
+
+	&:hover {
+	    background:#f2f3f2;
+	}
     }
 }
 
@@ -862,19 +1002,19 @@
     background:#fff;
 
     .comment__header {
-	 border-bottom:1px solid #e4e6e5;
-	 height:50px;
-	 padding-right:110px;
-	 position:relative;
+	border-bottom:1px solid #e4e6e5;
+	height:50px;
+	padding-right:110px;
+	position:relative;
 
-	 &:hover {
-	     background:#dbdddc;
-	 }
+	&:hover {
+	    background:#dbdddc;
+	}
 
 
-	 .action-menu {
-	     right:-100px;
-	 }
+	.action-menu {
+	    right:-100px;
+	}
     }
 
 
@@ -960,21 +1100,6 @@
 	text-decoration:none;
     }
 }
-
-
-/* green like btn < */
-
-.link_green-like {
-    background:@green !important;
-    color:#fff !important;
-    font:15px/52px @font-family-narrow !important;
-    text-transform:uppercase !important;
-
-    &:hover {
-	background:#14d1a2 !important;
-    }
-}
-/* green like btn > */
 
 
 /* .link_important < */
@@ -1214,7 +1339,76 @@
 
 /* form box > */
 
+.view-more {
+    background:#bdc2c8;
+    color:#fff;
+    font:16px/50px @font-family-narrow;
+    height:50px;
+    display:block;
+    text-align:center;
+    text-decoration:none;
+    text-transform:uppercase;
+
+    &:hover {
+	background:#4b5962;
+    }
+}
+
+.links {
+    .links__item {
+	background:#fff;
+	display:block;
+	height:49px;
+	overflow:hidden;
+	border-bottom:1px solid #e4e6e5;
+
+	&:hover {
+	  background:#e9ebe9;
+	  .link {
+	      color:#1e319d;
+	  }
+
+	}
+    }
+    .link {
+	color:#4b5962;
+	font-size:15px;
+	display:table-cell;
+	padding:0 20px;
+	vertical-align:middle;
+	text-decoration:none;
+	height:49px;
+	width:100%;
+    }
+}
 
 
 
 
+.article-sources {
+    border-top:1px solid #d4d8d8;
+    padding-top:22px;
+
+       h4 {
+	color:#4b5962;
+	font:16px/22px @font-family-narrow;
+	margin: 0 0 15px;
+	text-transform:uppercase;
+    }
+
+    .sources-list {
+	list-style:none;
+	margin-left:20px;
+
+	.sources-list__item {
+	    list-style:none;
+	    margin-bottom:2px;
+	    color:#8b9499;
+	    font-size:13px;
+
+	    .link {
+		text-decoration:none;
+	    }
+	}
+    }
+}
