--- a/code/less/layout.less
+++ b/code/less/layout.less
@@ -52,16 +52,67 @@ h2, h3 { font-size:21px;}
 
 
 /* Content styles < */
+
+
 .text-block {
     font-size:17px;
     line-height:26px;
 
-    h2, h3 {
-	margin-bottom:15px;
+    img {
+	display:block;
+	margin-top:20px;
+	margin-bottom:28px;
     }
+    img.align-center {
+	margin-left: auto;
+	margin-right: auto;
+    }
+
+    h1 {
+	color:#279d80;
+	font-size: 26px;
+	line-height: 34px;
+	margin-bottom: 23px;
+	font-family:@font-family-narrow;
+	margin-top: 32px;
+    }
+    h2 {
+	background: url(../images/bg/title.png) no-repeat 0 7px;
+	color:#33424b;
+	font-size:24px;
+	font-family:@font-family-narrow;
+	margin-bottom:10px;
+	line-height: 28px;
+	padding-left:20px;
+    }
+
+    h3 {
+	color:#9a4f54;
+	font:20px/24px @font-family-narrow;
+	margin: 20px 0 10px;
+    }
+
+    h4 {
+	color:#4b5962;
+	font:16px/22px @font-family-narrow;
+	margin: 0 0 20px;
+	text-transform:uppercase;
+    }
+
+    .text-section  {
+	padding-left:30px;
+
+	h2 {
+	    margin-left:-24px;
+	}
+    }
+
     ol, ul {
-	padding-left:15px;
-	margin-bottom:15px;
+	padding-left:55px;
+	margin-bottom:17px;
+	li {
+	    margin-bottom:2px;
+	}
     }
     ol {
 	list-style:decimal;
@@ -71,8 +122,12 @@ h2, h3 { font-size:21px;}
     }
     p {
 	margin-bottom:15px;
+	line-height: 24px;
     }
 }
+
+
+
 /* Content styles > */
 
 
@@ -100,7 +155,7 @@ h2, h3 { font-size:21px;}
     width:300px;
 }
 .article {
-    padding:29px 50px 25px 0;
+    padding:29px 30px 25px 0;
 }
 
 /*  layout > */
@@ -349,7 +404,6 @@ h2, h3 { font-size:21px;}
 	background: #4b5962;
 	float:left;
 	height: 90px;
-	position: relative;
 	width:130px;
 	.transition(background 0.2s ease);
 
@@ -398,6 +452,8 @@ h2, h3 { font-size:21px;}
 	background:@blue;
 	.menu_sub  {
 	    display: block;
+	    position: absolute;
+	    left:0;
 	}
 
 	& > .menu__link {
@@ -451,6 +507,10 @@ h2, h3 { font-size:21px;}
 	padding:20px 10px 20px 80px;
 	width:55%;
 	.placeholder(#dddddd);
+
+	&:focus {
+	    border-color:#fff;
+	}
     }
 
     .btn_search {
