--- a/code/less/components.less
+++ b/code/less/components.less
@@ -9,9 +9,14 @@
     display: block;
     text-decoration: none;
     .box_size();
+
+    img {
+	.box_size();
+    }
 }
 
 .userpic {
+    position: relative;
     overflow:hidden;
 
     .userpic__link {
@@ -578,6 +583,11 @@
 
 	.guide__title {
 	    color:#315bb6;
+
+	    .lang {
+		font-style:normal;
+		color:#9fa8da;
+	    }
 	}
 
 	.bg-style_gray-light {
@@ -602,6 +612,11 @@
 	vertical-align:middle;
 	height:52px;
 	word-break: break-all;
+
+	.lang {
+	    font-style:normal;
+	    color:#949ca0;
+	}
     }
     .box_base {
 	float:left;
@@ -619,7 +634,7 @@
     .guides-list__item {
 	background:#fff;
 	&:hover {
-	    background:#fff;
+	    background:#e9ebe9;
 	}
     }
 }
@@ -696,7 +711,7 @@
     }
 
     &:hover {
-	background:#f2f3f2;
+	background:#e9ebe9;
 
 	.standard-element__title {
 	    color:#315bb6;
@@ -704,6 +719,9 @@
 
 	.bg-style_blue {
 	    background:#354bc3;
+	}
+	.bg-style_red-light {
+	    background:#cf5a5b;
 	}
     }
 
@@ -841,6 +859,7 @@
 
     .thumbnails__item {
 	float:left;
+	position:relative;
 	.box_size();
     }
 }
@@ -1412,3 +1431,100 @@
 	}
     }
 }
+
+/* foto < */
+
+.foto-label {
+    bottom:0;
+    color:#fff;
+    font:11px/15px @font-family-base;
+    height:15px;
+    left:0;
+    text-align: center;
+    position:absolute;
+    width:50px;
+    z-index:10;
+}
+
+.foto-label_type_champ {
+    background:#9a4598;
+}
+.foto-label_type_grand  {
+    background:#1690a5;
+}
+
+.foto-gallery {
+    overflow:hidden;
+
+    .foto-gallery__item {
+	float:left;
+	height:248px;
+	position:relative;
+	overflow:hidden;
+	width:25%;
+    }
+}
+
+.foto {
+    display:block;
+
+    .foto__image {
+	    display:block;
+	    position:relative;
+	    .opacity(0.6);
+	    .transition(all 0.2s ease);
+	    z-index:1;
+	}
+	.foto__info {
+	    background:#4b5962;
+	    background:rgba(75,89,98,0.7);
+	    bottom:0;
+	    color:#fff;
+	    left:0;
+	    height:50px;
+	    line-height:50px;
+	    position:absolute;
+	    width:248px;
+	    z-index:2;
+	}
+	.foto-title {
+	    font-size:15px;
+	    font-weight:normal;
+	    margin:0 105px 0 10px;
+	    .ellipsis;
+	    .opacity(0.8);
+	    .transition(all 0.2s ease);
+	}
+	.box_comments {
+	    font-size:14px;
+	    position:absolute;
+	    bottom:0;
+	    right:50px;
+	    z-index:4;
+	    .opacity(0.8);
+
+	    .ico_content_comments-s {
+		margin:0 4px 0 0;
+	    }
+	}
+	.box_plus {
+	    font-size:14px;
+	    border-left:1px solid #767e81;
+	    position:absolute;
+	    bottom:0;
+	    right:0;
+	    z-index:4;
+	    .opacity(0.8);
+	}
+
+	&:hover {
+	    .foto__image {
+		.opacity(1);
+	    }
+	   .foto-title,
+	   .box {
+	       .opacity(0.9);
+	   }
+	}
+}
+/* foto > */
