--- a/code/less/constants.less
+++ b/code/less/constants.less
@@ -79,6 +79,7 @@
 @gray-dark: #4b5962;
 @gray-light:#bdc2c8;
 @green:#2ec19c;
+@violet:#602a7c;
 
 .bg-style(@color,@color-hover, @text-color) {
     (~".bg-style_@{color}") {
@@ -101,5 +102,5 @@
 .bg-style("gray-dark", #4b5962, #ffffff);
 .bg-style("gray-light", #00b88a, #67727a);
 .bg-style("green", @green, #ffffff);
-
+.bg-style("violet", #772c9e, #ffffff);
 
